--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "react": "^16.11.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.11.0",
+    "react-infinite-scroll-component": "^5.0.3",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "throttle-debounce": "^2.1.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
