--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "image-webpack-loader": "^6.0.0",
     "react": "^16.11.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.11.0",
